Added new buttons and initialization
