# src/controllers/MotorsController.js
@@ -11,3 +11,11 @@ export function disableMotors(request, response){
 		message : 'Ok'
 	})
 }
+
+export function startup(request, response){
+	request.smoothie.sendCommand('M63 M999 G91 G0 X0.001 M112')
+	request.smoothie.sendCommand('M999 G28.2XYZ')
+	response.send({
+		message: 'Ok'
+	})
+}
