# src/controllers/PinsController.js
@@ -4,3 +4,12 @@ export function getPinsStatus(request, response){
 		message: 'Ok'
 	})
 }
+
+export function startup(request, response){
+        let cmd = 'M63 M999 G91 G0 X0.001 M112'
+	request.smoothie.sendCommand(cmd)
+	request.smoothie.sendCommand('M999 G28.2XYZ')
+	response.send({
+		message: 'MOOOOOOOOOOO: ' + cmd
+	})
+}
